2009-04-16  Johannes Schmid  <jhs@gnome.org>

  Patch from:  Gennaro Bellizio <genbell@tiscali.it>
	* gdl/Makefile.am:
	* gdl/gdl-combo-button.c:
	* gdl/gdl-combo-button.h:
	* gdl/gdl.h:
	#560820 – Remove GdlComboButton

2009-04-06  Joel Holdsworth <joel@airwebreathe.org.uk>

	* gdl/gdl-dock-placeholder.c (gdl_dock_placeholder_new):
	* gdl/gdl-dock-placeholder.h:
	#577938 – gdl_dock_placeholder_new's name param should be const gchar* not gchar*

2009-04-03  Joel Holdsworth <joel@airwebreathe.org.uk>

	reviewed by: Johannes Schmid  <jhs@gnome.org>

	* gdl/gdl-dock-item-grip.c (gdl_dock_item_grip_expose),
	(gdl_dock_item_grip_instance_init),
	(gdl_dock_item_grip_size_request),
	(gdl_dock_item_grip_size_allocate),
	(gdl_dock_item_grip_class_init),
	(gdl_dock_item_grip_showhide_handle),
	(gdl_dock_item_grip_hide_handle), (gdl_dock_item_grip_show_handle):
	* gdl/gdl-dock-item-grip.h:
	#577107 – Layout bug in the grip widget headers
	#577001 – Patch: Added optional grip handle hatching

2009-04-03  Johannes Schmid  <jhs@gnome.org>

	* gdl/gdl-dock-bar.c (gdl_dock_bar_add_item):
	* gdl/gdl-dock-item-grip.c (gdl_dock_item_grip_set_label):
	* gdl/gdl-dock-item.c (gdl_dock_item_set_tablabel),
	(gdl_dock_item_hide_item), (gdl_dock_item_set_default_position):
	* gdl/gdl-dock-master.c (gdl_dock_master_add):
	* gdl/gdl-dock-object.c (gdl_dock_object_real_reduce):
	* gdl/gdl-dock-object.h:
	* gdl/gdl-dock-placeholder.c (gdl_dock_placeholder_dock):
	* gdl/gdl-stock.c (icon_set_from_data):
	#577469 – Remove deprecated GTK+ symbols

2009-03-26  Johannes Schmid  <jhs@gnome.org>

	Patch from Deniz Koçak <lenduha@gmail.com>	
	* gdl/gdl-dock-layout.c:
	Add gtk-doc comments

2009-03-18  Johannes Schmid  <jhs@gnome.org>

	* configure.in: Bumped version to 2.27.0

2009-03-18  Joel Holdsworth <joel@airwebreathe.org.uk>

	* gdl/Makefile.am:
	* gdl/gdl-dock-item-grip.c (gdl_dock_item_create_label_widget),
	(gdl_dock_item_grip_item_notify), (gdl_dock_item_grip_destroy),