@@ -272,18 +272,6 @@ GDL_IS_SWITCHER_CLASS
 </SECTION>
 
 <SECTION>
-<FILE>gdl</FILE>
-</SECTION>
-
-<SECTION>
-<FILE>gdl-stock</FILE>
-GDL_STOCK_CLOSE
-GDL_STOCK_MENU_LEFT
-GDL_STOCK_MENU_RIGHT
-gdl_stock_init
-</SECTION>
-
-<SECTION>
 <FILE>gdl-tools</FILE>
 DO_GDL_TRACE
 GDL_TRACE
